<resources>
    <string name="app_name">Dean</string>
    <string name="action_settings">Settings</string>
    <string name="role">Roles</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="next">next</string>
    <string name="auth">Authentification</string>
    <string name="warn">Fill all fields!!!</string>
    <string name="error">wrong data</string>
    <string name="success">Success</string>
    <string name="journal">Journal</string>
    <string name="roll">Roll</string>
    <string name="name">Name</string>
    <string name="modul_first">Modul 1</string>
    <string name="modul_second">Modul 2</string>
    <string name="finish_mark">Finish Mark</string>
    <string name="manage_journal">Manage Journal</string>
    <string name="accept_journal">Accept Journal</string>
    <string name="course1">1 course</string>
    <string name="course2">2 course</string>
    <string name="course3">3 course</string>
    <string name="course4">4 course</string>
    <string name="subjects">Subjects</string>

    <string-array name="roles">
        <item>Dekan</item>
        <item>Head Depart</item>
        <item>Teacher</item>
        <item>Student</item>
    </string-array>
</resources>
