<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="18dp"
    tools:context=".dekan.DekanJournal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/course1"
        android:gravity="center_horizontal"
        android:textSize="26sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/course2"
        android:gravity="center_horizontal"
        android:textSize="26sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/course3"
        android:gravity="center_horizontal"
        android:textSize="26sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/course4"
        android:gravity="center_horizontal"
        android:textSize="26sp"/>

</LinearLayout>